test/types/file/freadIntFailed.good
freadIntFailed.chpl:4: error: Unhandled system error: Invalid argument (22)
